--- a/ManagerVistor/UiLib/UiLib/UiLib.vcproj
+++ b/ManagerVistor/UiLib/UiLib/UiLib.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="E:\Boost\boost_1_55_0\boost_1_55_0\;.\"
+				AdditionalIncludeDirectories="E:\Boost\boost_1_55_0\;.\"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;UILIB_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -63,7 +63,7 @@
 				Name="VCLinkerTool"
 				OutputFile="../dll/UiLib_ud.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="E:\Boost\boost_1_55_0\boost_1_55_0\stage\lib"
+				AdditionalLibraryDirectories="E:\Boost\boost_1_55_0\stage\lib"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				ImportLibrary="../Lib/UiLib_ud.lib"
