--- a/ManagerVistor/ManagerVistor/ManagerVistor.vcproj
+++ b/ManagerVistor/ManagerVistor/ManagerVistor.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;C:\Program Files\MySQL\Connector C++ 1.1.3\include&quot;"
+				AdditionalIncludeDirectories="E:\Boost\boost_1_55_0;&quot;C:\Program Files\MySQL\Connector C++ 1.1.3\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;CPPCONN_PUBLIC_FUNC="
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -198,6 +198,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\MyDateTimeUI.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -253,6 +257,10 @@
 			</File>
 			<File
 				RelativePath=".\ManagerVistor.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MyDateTimeUI.h"
 				>
 			</File>
 			<File
