--- a/ManagerVistor/ManagerVistor/ManagerVistor.vcproj
+++ b/ManagerVistor/ManagerVistor/ManagerVistor.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;C:\Program Files\MySQL\Connector C++ 1.1.3\include&quot;"
+				AdditionalIncludeDirectories="E:\Boost\boost_1_55_0;&quot;C:\Program Files\MySQL\Connector C++ 1.1.3\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;CPPCONN_PUBLIC_FUNC="
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -182,6 +182,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\DataManageUI.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\DealTime.cpp"
 				>
 			</File>
@@ -237,6 +241,10 @@
 			</File>
 			<File
 				RelativePath=".\ConectToMySql.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DataManageUI.h"
 				>
 			</File>
 			<File
