2015,2,4 最近一次新分支修改

--- a/ManagerVistor/ManagerVistor/ManagerVistor.vcproj
+++ b/ManagerVistor/ManagerVistor/ManagerVistor.vcproj
@@ -222,6 +222,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\VisitorListUI.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\VisitorRecordUI.cpp"
 				>
 			</File>
@@ -273,6 +277,10 @@
 			</File>
 			<File
 				RelativePath=".\targetver.h"
+				>
+			</File>
+			<File
+				RelativePath=".\VisitorListUI.h"
 				>
 			</File>
 			<File
