修复datetimeUI控件刷新位置改变buf

--- a/ManagerVistor/ManagerVistor/ManagerVistor.vcproj
+++ b/ManagerVistor/ManagerVistor/ManagerVistor.vcproj
@@ -240,6 +240,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ConstDataDef.h"
+				>
+			</File>
+			<File
 				RelativePath=".\DealTime.h"
 				>
 			</File>
