--- a/ManagerVistor/UiLib/UiLib/UiLib.vcproj
+++ b/ManagerVistor/UiLib/UiLib/UiLib.vcproj
@@ -118,7 +118,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="E:\Boost\boost_1_55_0\boost_1_55_0;.\"
+				AdditionalIncludeDirectories="E:\Boost\boost_1_55_0;.\"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;UILIB_EXPORTS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -139,7 +139,7 @@
 				Name="VCLinkerTool"
 				OutputFile="../dll/UiLib_u.dll"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="E:\Boost\boost_1_55_0\boost_1_55_0\stage\lib"
+				AdditionalLibraryDirectories="E:\Boost\boost_1_55_0\stage\lib"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
