--- a/ManagerVistor/ManagerVistor/ManagerVistor.vcproj
+++ b/ManagerVistor/ManagerVistor/ManagerVistor.vcproj
@@ -182,6 +182,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\DataManage.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\DataManageUI.cpp"
 				>
 			</File>
@@ -191,6 +195,18 @@
 			</File>
 			<File
 				RelativePath=".\DoFile.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\DoorKeeper.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\LANCommunicate.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\ListPlusUI.cpp"
 				>
 			</File>
 			<File
@@ -222,7 +238,15 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\VisitorListUI.cpp"
+				RelativePath=".\VisitorInfo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\VisitorList.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\VisitorManageControl.cpp"
 				>
 			</File>
 			<File
@@ -240,11 +264,23 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\CDuiMenu.h"
+				>
+			</File>
+			<File
 				RelativePath=".\CommonConvert.h"
 				>
 			</File>
 			<File
 				RelativePath=".\ConectToMySql.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DataDef.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DataManage.h"
 				>
 			</File>
 			<File
@@ -257,6 +293,18 @@
 			</File>
 			<File
 				RelativePath=".\DoFile.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DoorKeeper.h"
+				>
+			</File>
+			<File
+				RelativePath=".\LANCommunicate.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ListPlusUI.h"
 				>
 			</File>
 			<File
@@ -280,7 +328,15 @@
 				>
 			</File>
 			<File
-				RelativePath=".\VisitorListUI.h"
+				RelativePath=".\VisitorInfo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\VisitorList.h"
+				>
+			</File>
+			<File
+				RelativePath=".\VisitorManageControl.h"
 				>
 			</File>
 			<File
