将郭献龙的接口添加到工程

--- a/ManagerVistor/ManagerVistor/ManagerVistor.vcproj
+++ b/ManagerVistor/ManagerVistor/ManagerVistor.vcproj
@@ -198,13 +198,13 @@
 				>
 			</File>
 			<File
-				RelativePath=".\ExcelImpExp.cpp"
+				RelativePath=".\DoorKeeper.cpp"
 				>
 			</File>
-      <File
-        RelativePath=".\DoorKeeper.cpp"
-        >
-      </File>
+			<File
+				RelativePath=".\ExcelInterface.cpp"
+				>
+			</File>
 			<File
 				RelativePath=".\LANCommunicate.cpp"
 				>
@@ -283,10 +283,10 @@
 				RelativePath=".\ConstDataDef.h"
 				>
 			</File>
-      <File
-        RelativePath=".\DataDef.h"
-        >
-      </File>
+			<File
+				RelativePath=".\DataDef.h"
+				>
+			</File>
 			<File
 				RelativePath=".\DataManage.h"
 				>
@@ -304,13 +304,13 @@
 				>
 			</File>
 			<File
-				RelativePath=".\ExcelImpExp.h"
+				RelativePath=".\DoorKeeper.h"
 				>
 			</File>
-      <File
-        RelativePath=".\DoorKeeper.h"
-        >   
-      </File>
+			<File
+				RelativePath=".\ExcelInterface.h"
+				>
+			</File>
 			<File
 				RelativePath=".\LANCommunicate.h"
 				>
